--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\SliderScript.cs" />
      <Compile Include="Assets\Scripts\Tile.cs" />
+     <Compile Include="Assets\Scripts\Timer.cs" />
      <Compile Include="Assets\Scripts\XmlLoader.cs" />
      <Compile Include="Assets\SliderLeftScript.cs" />
      <Compile Include="Assets\TempStuff\TemporaryForTesting.cs" />
