Poprawiona bitwa i dodany numer do reinforcementu
dodana opcja pauzy i wycofania się (nie sprzężone z przyciskiem)
poprawione animacje, wykonujące się w zależności od wyniku porównanai kart.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\ArmiesSlider.cs" />
      <Compile Include="Assets\Scripts\Army.cs" />
+     <Compile Include="Assets\Scripts\Battle.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\CardDragAndDrop.cs" />
      <Compile Include="Assets\Scripts\CardStrategy.cs" />
